# ReactNativeStockfish

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Loloof64ReactNativeStockfish.podspec  README.md  ReactNativeStockfish.podspec  download_dependencies.rb  lefthook.yml  loloof64-react-native-stockfish.podspec  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/loloof64/reactnativestockfish/: ReactNativeStockfishModule.kt  ReactNativeStockfishPackage.kt
cpp/: loloof64-react-native-stockfish.cpp  loloof64-react-native-stockfish.h  react-native-stockfish.cpp  react-native-stockfish.h
cpp/fixes/: stream_fix.h
cpp/stockfish/fixes/: fixes.h  stream_fix.h
cpp/stockfish/src/: benchmark.cpp  engine.cpp  evaluate.cpp  evaluate.h  main.cpp  memory.cpp  misc.cpp  misc.h  search.cpp  tt.cpp  tune.cpp  uci.cpp
cpp/stockfish/src/nnue/: network.cpp
cpp/stockfish/src/syzygy/: tbprobe.cpp
example/: README.md  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/loloof64.reactnativestockfish.example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/loloof64/reactnativestockfish/example/: MainActivity.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ReactNativeStockfishExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeStockfishExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeStockfishExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeStockfishExample.xcscheme
example/ios/ReactNativeStockfishExampleTests/: ReactNativeStockfishExampleTests.m
example/src/: App.tsx
ios/: Loloof64ReactNativeStockfish.h  Loloof64ReactNativeStockfish.mm  ReactNativeStockfish old.h  ReactNativeStockfish old.mm  ReactNativeStockfish.h  ReactNativeStockfish.mm  ReactNativeStockfish_old.mm
src/: NativeReactNativeStockfish.ts  index.tsx
